[package]
name = "array-queue"
version = "0.4.2"
edition = "2024"
description = "Fixed size bidirectional queues based on arrays"
license = "MIT"

[dependencies]

[lints.clippy]
alloc_instead_of_core = "deny"
complexity = "deny"
correctness = "deny"
dbg_macro = "deny"
derive_partial_eq_without_eq = "deny"
equatable_if_let = "deny"
explicit_deref_methods = "deny"
if_not_else = "deny"
manual_let_else = "deny"
missing_const_for_fn = "deny"
missing_panics_doc = "deny"
multiple_crate_versions = { level = "allow", priority = 1 }
option_if_let_else = "deny"
perf = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
style = "deny"
suspicious = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
uninlined_format_args = "deny"
unnecessary_safety_comment = "deny"
unused_self = "deny"
use_self = "deny"

[lints.rust]
missing_docs = "deny"
warnings = "deny"
